base de dades y método quizás hecho de generarDieta